(lang dune 3.16)

(name tigerml)

(generate_opam_files true)

(using menhir 3.0)

(source
 (github username/reponame))

(authors "Guilherme de Lazari")

(maintainers "Guilherme de Lazari")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name tigerml)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune menhir)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
